--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,108 @@
+h2 {
+  color: white;
+}
+
+p {
+  color: white;
+}
+
+.slider {
+  display: flex;
+}
+
 .app {
-  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  // width: 200%;
+}
+
+.img {
+  display: flex;
+  padding-top: 120px;
+  background-image: url("https://urbe.me/lab/wp-content/uploads/2018/05/06052018-vista-panoramica-de-uberlandia-mg-2.jpg");
+}
+
+.opcity {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.blockText {
+  display: flex;
+  flex-direction: column;
+  padding: 0 30px 0;
+  align-items: center;
+  justify-content: center;
+  height: 400px;
+  // background-color: red;
+  background-image: url("./assets/img/fundo_large.jpg");
+}
+
+.empresa{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 350px;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.atuacao {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  // justify-content: center;
+  height: 400px;
+  // background-color: red;
+  background-image: url("./assets/img/fundo_large.jpg");
+
+  img {
+    height: 30%;
+  }
+
+  .boxDescription {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    text-align: center;
+  }
+}
+
+.clientes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .title {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  padding: 0 30px 0;
+  // align-items: center;
+  // justify-content: center;
   // background-color: red;
+  color: white;
+}
+
+.buttonUp{
+  flex: 1;
+  position: fixed;
+  z-index: 100;
+  background-color: black;
+  width: 50px;
+  height: 50px;
+  margin-left: 93vw;
+  margin-top: 90vh;
+}
+
+@media only screen and (max-width: 600px) {
+  .clientes {
+    img {
+      width: 85%;
+    }
+  }
 }
