--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,18 +1,14 @@
-
 .Container {
-    background-image: url("../../assets/img/fundo_large.jpg");
+  background-image: url("../../assets/img/fundo_large.jpg");
   // background-color: red;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-
-  margin-bottom: 30px;
-
+  // justify-content: center;
   border-width: 2;
-//   border-bottom: solid red;
+  //   border-bottom: solid red;
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
-
+  padding-left: 5%;
   img {
     margin-top: 20px;
     height: 80px;
@@ -26,10 +22,34 @@
   flex-direction: row;
   margin-top: 10px;
   margin-bottom: 10px;
+  padding-left: 10%;
   a {
     margin-left: 10px;
     margin-right: 10px;
     text-decoration: none;
     color: white;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .Container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-left: 0%;
+  }
+  
+  .links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-left: 0%;
+
+    a {
+      padding-bottom: 5%;
+
+    }
   }
 }
