--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,33 +1,52 @@
 .Container {
   background-image: url("../../assets/img/fundo_large.jpg");
-  // background-color: red;
   display: flex;
   flex-direction: row;
   align-items: center;
-  // justify-content: center;
+  justify-content: center;
   border-width: 2;
-  //   border-bottom: solid red;
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
-  padding-left: 5%;
+  padding: 20px;
   img {
-    margin-top: 20px;
-    height: 80px;
+    height: 90px;
     width: 300px;
-    vertical-align: top;
+    // vertical-align: top;
   }
 }
 
 .links {
   display: flex;
   flex-direction: row;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding-left: 10%;
+  padding-left: 20px;
   a {
     margin-left: 10px;
     margin-right: 10px;
     text-decoration: none;
     color: white;
+    font-weight: bold;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .Container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-left: 0%;
+  }
+  
+  .links {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding-left: 0%;
+
+    a {
+      padding-bottom: 5%;
+
+    }
   }
 }
 
@@ -38,6 +57,9 @@
     align-items: center;
     justify-content: center;
     padding-left: 0%;
+
+    img {
+    }
   }
   
   .links {
