--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -76,8 +76,11 @@
     padding-left: 0%;
 
     a {
-      padding-bottom: 5%;
-
+      padding-bottom: 5%;}
+    img{
+      max-width:50%;
+      max-height:50%;
+      width: auto;
+      height: auto;
     }
-  }
-}
+  }}
