--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -7,6 +7,7 @@
   border-width: 2;
   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
   padding: 20px;
+  // background-color: red;
   img {
     height: 90px;
     width: 300px;
@@ -15,6 +16,10 @@
 }
 
 .links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   font-family: roboto;
   cursor: pointer;
   display: flex;
@@ -22,6 +27,22 @@
   padding-left: 20px;
   a {
     margin-left: 10px;
+    margin-right: 10px;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    font-family: roboto;
+  }
+}
+
+.phoneNumber {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  a {
+    // margin-left: 10px;
     margin-right: 10px;
     text-decoration: none;
     color: white;
@@ -66,6 +87,13 @@
     img {
     }
   }
+
+  .phoneNumber {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
   
   .links {
     cursor: pointer;
@@ -76,11 +104,8 @@
     padding-left: 0%;
 
     a {
-      padding-bottom: 5%;}
-    img{
-      max-width:50%;
-      max-height:50%;
-      width: auto;
-      height: auto;
+      padding-bottom: 5%;
+
     }
-  }}
+  }
+}
